# connect4_rl_agent

./: .flake8  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
projet/: __main__.py  environment.py  game.py  main.py  player.py
projet/agent/: __init__.py  actor-critic.py  actor_critic.py  base_agent.py  human.py  mc_controller.py  mcts.py  ppo.py  q_learning.py  random.py  sarsa.py
projet/models/actor_critic/: conv_player_0_actor.pth  conv_player_0_critic.pth  conv_player_1_actor.pth  conv_player_1_critic.pth  player_0_actor.pth  player_0_critic.pth  player_1_actor.pth  player_1_critic.pth
